            ESP32: update esp-idf to v3.3.6
            Bangle.js2: Fix issue where Bangle.getPressure could leave the barometer on
            Bangle.js2: Bootloader update - triple-check CRC after writing firmware and retry if it fails
            Bangle.js2: setUI(updown/leftright) now responds to button on falling (not rising) edge

     2v16 : JIT functions now execute in their own function scope (allows arguments)
            Move older 'HY' boards to use `g` for the built-in graphics, not `LCD` (and change docs)
            Fix print(()=>{}) printing 'function (undefined) {}' - saves 1 var for arrow fn without args (fix #2265)
            Bangle.js: Add support for `Bangle.setUI({remove:...})` to allow apps to be unloaded without a full reboot.
            Bangle.js2: Fixed `Bangle.setLCDOverlay(img,x,y)` with negative offsets
            Allow `atob` to accept base64 with whitespace inside it
            Puck.js Lite: remove NFC from build (no NFC on board the Lite version)
            Storage: When using Filename Table, be absolutely sure it's correct before using it (stops hang at startup if storage corrupt)
            Bangle.js: Add Bangle.setOptions({btnLoadTimeout:...}) to allow home button timeout to be configurable
            Bangle.js: A forced interrupt after button held now occurs 0.5s (not 0.1s) after the reboot request
            Bangle.js: Holding the button during storage compact now won't try and break out of it
            Bangle.js: Use 4k/64k/all flash clear commands to make erasing (and hence compact) external flash faster
            Bangle.js2: Add built-in touchscreen calibration
            Bangle.js2: Add fast-path for all-white or all-black full-width graphics fill/clear (24ms -> 2ms)
            Bangle.js2: LCD background flip (send to LCD while returning to execute other code)
            Bangle.js2: Swipe direction is now modified based on g.setRotation